@@ -5,6 +5,7 @@ Version 1.2.2 (2010-xx-xx)
 	Fixed so the plupload.buildUrl function uses the UTF compatible encodeURIComponent method instead of escape.
 	Fixed so that all file types can be selected if you don't specify a filter setting.
 	Fixed so more valid HTTP status codes are accepted as valid responses.
+	Fixed so all runtimes fills the features object with available features.
 	Fixed some issues with the HTML4 runtime if there wasn't any existing forms on the page.
 	Fixed some conflict issues with HTML4 runtime and forms with the input names of action or target.
 	Fixed bug where some Gecko versions would produce exceptions when checking the HTTP status of a XHR.
